--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 <li>Take that nummber of bytes from the front of the full destination.</li>
 <li>Convert back to a base64 representation using i2p's base64 character set.</li>
 </ol>
-<p>A number of applications and scripts exist to perform these steps for you. Here are some of them:</p>
+<p>A number of applications and scripts exist to perform these steps for you. Here are some of them, but this is far from exhaustive:</p>
 <ul>
 <li><a href="https://github.com/i2p/i2p.scripts">the i2p.scripts collection of scripts(Mostly java and bash)</a></li>
 <li><a href="https://github.com/eyedeekay/keyto">my application for converting keys(Go)</a></li>
