add where to get the base32

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 <pre><code>    head -c 516 ~/.i2p/i2pbote/local_dest.key
 </code></pre>
 <h3 id="methon-b-do-a-lookup">Methon B: Do a lookup</h3>
-<p>If that seems like a bit too much work, it's possible for you to look up the base64 destination of your Bote connection by querying it's base32 address using any of the available means for looking up a base32 address.</p>
+<p>If that seems like a bit too much work, it's possible for you to look up the base64 destination of your Bote connection by querying it's base32 address using any of the available means for looking up a base32 address. The base32 address of your Bote node is available on the &quot;Connection&quot; page under the bote plugin application, at <a href="http://127.0.0.1:7657/i2pbote/network">127.0.0.1:7657/i2pbote/network</a></p>
 <h1 id="step-three-contact-us">Step Three: Contact Us!</h1>
 <h3 id="update-the-built-in-peerstxt-file-with-your-new-node">Update the built-in-peers.txt file with your new node</h3>
 <p>Now that you've got the correct destination for your I2P-Bote node, the final step is to add yourself to the default peers list for <a href="https://github.com/i2p/i2p.i2p-bote/tree/master/core/src/main/resources/i2p/bote/network">I2P-Bote here</a> here. You can do this by forking the repository, adding yourself to the list with your name commented out, and your 516-char destination directly below it, like this:</p>
